--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -9,6 +9,9 @@
 "Address","Address"
 "Address Information","Address Information"
 "Add Segment","Add Segment"
+"Allow Multiple Sequences","Allow Multiple Sequences"
+"Allow Overlapping Sequences","Allow Overlapping Sequences"
+"Allow starting new sequences while existing ones are still active for the same customer","Allow starting new sequences while existing ones are still active for the same customer"
 "Applied Promotion Rules","Applied Promotion Rules"
 "Are you sure?","Are you sure?"
 "Are you sure you want to delete this sequence step?","Are you sure you want to delete this sequence step?"
@@ -35,6 +38,7 @@
 "Configurable Product","Configurable Product"
 "Count","Count"
 "Coupon expiration days","Coupon expiration days"
+"Coupon expiration days cannot be negative.","Coupon expiration days cannot be negative."
 "Coupon Generation Settings","Coupon Generation Settings"
 "Coupon Prefix","Coupon Prefix"
 "Customer","Customer"
@@ -58,9 +62,11 @@
 "Delay","Delay"
 "Delay (Minutes)","Delay (Minutes)"
 "Delay before sending","Delay before sending"
+"Delay minutes cannot be negative.","Delay minutes cannot be negative."
 "Delete","Delete"
 "Delete Segment","Delete Segment"
 "Delete Segments","Delete Segments"
+"Delete Step","Delete Step"
 "Disabled","Disabled"
 "Downloadable Product","Downloadable Product"
 "Edit","Edit"
@@ -90,6 +96,9 @@
 "hours","hours"
 "If %s %s %s","If %s %s %s"
 "Immediate","Immediate"
+"Invalid newsletter template selected.","Invalid newsletter template selected."
+"Invalid request.","Invalid request."
+"Invalid sales rule selected for coupon generation.","Invalid sales rule selected for coupon generation."
 "Invalid segment.","Invalid segment."
 "Invalid status.","Invalid status."
 "Invalid trigger type.","Invalid trigger type."
@@ -146,6 +155,7 @@
 "Row Total (Inc. Tax)","Row Total (Inc. Tax)"
 "Sales rule does not exist.","Sales rule does not exist."
 "Sales rule is not active.","Sales rule is not active."
+"Sales rule is required when coupon generation is enabled.","Sales rule is required when coupon generation is enabled."
 "Sales rule must be configured for specific coupon codes.","Sales rule must be configured for specific coupon codes."
 "Sales rule must have auto-generation enabled.","Sales rule must have auto-generation enabled."
 "Sales rule to base coupon on","Sales rule to base coupon on"
@@ -159,8 +169,10 @@
 "Segment Name","Segment Name"
 "Segment name is required.","Segment name is required."
 "Segment Refresh Cron Schedule","Segment Refresh Cron Schedule"
+"Selected sales rule is not active.","Selected sales rule is not active."
 "Sent","Sent"
 "Sequence ID is required.","Sequence ID is required."
+"Sequence not found.","Sequence not found."
 "Sequence step %d: %s","Sequence step %d: %s"
 "Sequence Step Settings","Sequence Step Settings"
 "Shopping Cart","Shopping Cart"
@@ -171,9 +183,11 @@
 "Status Change Date","Status Change Date"
 "Step","Step"
 "Step Number","Step Number"
+"Step number %d already exists for this segment.","Step number %d already exists for this segment."
 "Step number must be greater than 0.","Step number must be greater than 0."
 "Subject","Subject"
 "Subscription Status","Subscription Status"
+"Template ID is required.","Template ID is required."
 "The email sequence has been deleted.","The email sequence has been deleted."
 "The email sequence has been saved.","The email sequence has been saved."
 "The segment has been deleted.","The segment has been deleted."
