--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -687,8 +687,6 @@
 "The category has been saved.","The category has been saved."
 "The comparison list was cleared.","The comparison list was cleared."
 "The file '%s' for '%s' has an invalid extension","The file '%s' for '%s' has an invalid extension"
-"The file '%s' for '%s' has invalid upload data.","The file '%s' for '%s' has invalid upload data."
-"The file '%s' you uploaded is larger than %s Megabytes allowed by server","The file '%s' you uploaded is larger than %s Megabytes allowed by server"
 "The file was only partially uploaded. Please try again.","The file was only partially uploaded. Please try again."
 "The file you uploaded is larger than %s Megabytes allowed by server","The file you uploaded is larger than %s Megabytes allowed by server"
 "The filters must be an array.","The filters must be an array."
@@ -745,6 +743,7 @@
 "Unable to find an attribute to delete.","Unable to find an attribute to delete."
 "Unable to find a search term to delete.","Unable to find a search term to delete."
 "Unable to get the product ID.","Unable to get the product ID."
+"Unable to read uploaded file for validation.","Unable to read uploaded file for validation."
 "Unassigned Attributes","Unassigned Attributes"
 "Unknown attribute: %s.","Unknown attribute: %s."
 "Unknown EAV indexer type ""%s"".","Unknown EAV indexer type ""%s""."
