--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -400,6 +400,7 @@
 "Max Characters","Max Characters"
 "Maximal Depth","Maximal Depth"
 "Maximum allowed image size for '%s' is %sx%s px.","Maximum allowed image size for '%s' is %sx%s px."
+"Maximum file size","Maximum file size"
 "Maximum image height","Maximum image height"
 "Maximum Image Size","Maximum Image Size"
 "Maximum image width","Maximum image width"
@@ -686,7 +687,6 @@
 "The category has been deleted.","The category has been deleted."
 "The category has been saved.","The category has been saved."
 "The comparison list was cleared.","The comparison list was cleared."
-"The file '%s' for '%s' has an invalid extension","The file '%s' for '%s' has an invalid extension"
 "The file was only partially uploaded. Please try again.","The file was only partially uploaded. Please try again."
 "The file you uploaded is larger than %s Megabytes allowed by server","The file you uploaded is larger than %s Megabytes allowed by server"
 "The filters must be an array.","The filters must be an array."
