--- a/app/locale/en_US/Mage_Newsletter.csv
+++ b/app/locale/en_US/Mage_Newsletter.csv
@@ -37,6 +37,7 @@
 "Guest","Guest"
 "ID","ID"
 "Invalid queue selected.","Invalid queue selected."
+"Invalid sender email address","Invalid sender email address"
 "Invalid subscription confirmation code.","Invalid subscription confirmation code."
 "Invalid subscription ID.","Invalid subscription ID."
 "Message","Message"
@@ -89,6 +90,7 @@
 "Sender","Sender"
 "Sender Email","Sender Email"
 "Sender Name","Sender Name"
+"Sender name is required","Sender name is required"
 "Sending","Sending"
 "Sent","Sent"
 "Sign up for our newsletter","Sign up for our newsletter"
@@ -108,12 +110,14 @@
 "Subscription Options","Subscription Options"
 "Success Email Sender","Success Email Sender"
 "Success Email Template","Success Email Template"
+"Template code is required","Template code is required"
 "Template Content","Template Content"
 "Template Information","Template Information"
 "Template Name","Template Name"
 "Template Styles","Template Styles"
 "Template Subject","Template Subject"
 "Template Type","Template Type"
+"Template type must be numeric","Template type must be numeric"
 "Thank you for your subscription.","Thank you for your subscription."
 "There was a problem with the subscription.","There was a problem with the subscription."
 "There was a problem with the subscription: %s","There was a problem with the subscription: %s"
