--- a/app/locale/en_US/Mage_Usa.csv
+++ b/app/locale/en_US/Mage_Usa.csv
@@ -17,6 +17,7 @@
 "Allowed Methods","Allowed Methods"
 "Allows breaking total order weight into smaller pieces if it exeeds %s %s to ensure accurate calculation of shipping charges.","Allows breaking total order weight into smaller pieces if it exeeds %s %s to ensure accurate calculation of shipping charges."
 "Allows breaking total order weight into smaller pieces if it exeeds 70 kg to ensure accurate calculation of shipping charges.","Allows breaking total order weight into smaller pieces if it exeeds 70 kg to ensure accurate calculation of shipping charges."
+"Authentication error","Authentication error"
 "Break bulk economy","Break bulk economy"
 "Break bulk express","Break bulk express"
 "Business Service Center","Business Service Center"
@@ -58,6 +59,7 @@
 "Enables/Disables SSL verification of Maho server by UPS.","Enables/Disables SSL verification of Maho server by UPS."
 "Enable SSL Verification","Enable SSL Verification"
 "Error #%s : %s","Error #%s : %s"
+"Error reading response from UPS","Error reading response from UPS"
 "Europack","Europack"
 "Europe First Priority","Europe First Priority"
 "Exchange rate %s (Base Currency) -> %s not found. DHL method %s skipped","Exchange rate %s (Base Currency) -> %s not found. DHL method %s skipped"
@@ -305,8 +307,10 @@
 "UPS Worldwide Saver","UPS Worldwide Saver"
 "User ID","User ID"
 "USPS","USPS"
+"USPS Ground Advantage","USPS Ground Advantage"
 "USPS GXG Envelopes","USPS GXG Envelopes"
 "Variable","Variable"
+"We can't convert a rate from ""%1-%2"".","We can't convert a rate from ""%1-%2""."
 "Weight Unit","Weight Unit"
 "Width","Width"
 "Worldwide Expedited","Worldwide Expedited"
