--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -2,6 +2,7 @@
 "%s cache type(s) disabled.","%s cache type(s) disabled."
 "%s cache type(s) enabled.","%s cache type(s) enabled."
 "%s cache type(s) refreshed.","%s cache type(s) refreshed."
+"(%s/%s/%s)","(%s/%s/%s)"
 "(For Type ""Local Server"" need to use relative path to Magento install var/export or var/import, e.g. var/export, var/import, var/export/some/dir, var/import/some/dir)","(For Type ""Local Server"" need to use relative path to Magento install var/export or var/import, e.g. var/export, var/import, var/export/some/dir, var/import/some/dir)"
 "(For US 2-letter state names)","(For US 2-letter state names)"
 "(If left empty will be auto-generated)","(If left empty will be auto-generated)"
@@ -964,6 +965,7 @@
 "The flat catalog category has been rebuilt.","The flat catalog category has been rebuilt."
 "The Flat Catalog Product was rebuilt","The Flat Catalog Product was rebuilt"
 "The following role resource(s) are not orphaned: %s","The following role resource(s) are not orphaned: %s"
+"The following role resources are no longer available in the system: %s. You can delete them by <a href=""%s"">clicking here</a>.","The following role resources are no longer available in the system: %s. You can delete them by <a href=""%s"">clicking here</a>."
 "The group node name must be specified with field node name.","The group node name must be specified with field node name."
 "The image cache was cleaned.","The image cache was cleaned."
 "The image cache was cleared.","The image cache was cleared."
