--- a/app/locale/en_US/Maho_AdminActivityLog.csv
+++ b/app/locale/en_US/Maho_AdminActivityLog.csv
@@ -1,4 +1,5 @@
 "Action","Action"
+"Activities","Activities"
 "Activity Information","Activity Information"
 "Activity Log","Activity Log"
 "Activity log entry not found","Activity log entry not found"
