--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -1,12 +1,16 @@
 "(Optional. Leave blank for no prefix)","(Optional. Leave blank for no prefix)"
 "Additional path added after Base URL to access your Administrative Panel (e.g. admin, backend, control etc.).","Additional path added after Base URL to access your Administrative Panel (e.g. admin, backend, control etc.)."
+"Admin","Admin"
 "Admin Path","Admin Path"
 "Base URL","Base URL"
+"Complete","Complete"
+"Config","Config"
 "Configuration","Configuration"
 "Confirm Password","Confirm Password"
 "Connection","Connection"
 "Continue","Continue"
 "Create Admin Account","Create Admin Account"
+"Creating Your Admin Account","Creating Your Admin Account"
 "Database","Database"
 "Database Connection","Database Connection"
 "Database connection error.","Database connection error."
@@ -32,7 +36,10 @@
 "I agree to the above terms and conditions.","I agree to the above terms and conditions."
 "Installation","Installation"
 "Installer does not exist for %s database type","Installer does not exist for %s database type"
+"Installing Maho","Installing Maho"
+"Just a moment...","Just a moment..."
 "Last Name","Last Name"
+"License","License"
 "License Agreement","License Agreement"
 "Locale","Locale"
 "Locale settings","Locale settings"
@@ -49,6 +56,7 @@
 "PHP Extensions ""%s"" must be loaded.","PHP Extensions ""%s"" must be loaded."
 "Please correct the user data and try again.","Please correct the user data and try again."
 "Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
+"Please wait while we set up your store...","Please wait while we set up your store..."
 "Provide a complete base URL for SSL connection. For example: %s","Provide a complete base URL for SSL connection. For example: %s"
 "Required Fields","Required Fields"
 "Response from server isn't valid.","Response from server isn't valid."
@@ -68,6 +76,7 @@
 "User Password","User Password"
 "Use Secure URLs (SSL)","Use Secure URLs (SSL)"
 "Web access options","Web access options"
+"Web Access Options","Web Access Options"
 "Welcome to Maho's Installation Wizard","Welcome to Maho's Installation Wizard"
 "You're All Set","You're All Set"
 "You're All Set!","You're All Set!"
