--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -7,7 +7,6 @@
 "Config","Config"
 "Configuration","Configuration"
 "Confirm Password","Confirm Password"
-"Connection","Connection"
 "Continue","Continue"
 "Create Admin Account","Create Admin Account"
 "Creating Your Admin Account","Creating Your Admin Account"
@@ -26,7 +25,6 @@
 "Email","Email"
 "Email Address","Email Address"
 "Enable Charts","Enable Charts"
-"Enable this option only if you have SSL available.","Enable this option only if you have SSL available."
 "File System","File System"
 "First Name","First Name"
 "Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
@@ -34,15 +32,12 @@
 "Go to Frontend","Go to Frontend"
 "Host","Host"
 "I agree to the above terms and conditions.","I agree to the above terms and conditions."
-"Installation","Installation"
 "Installer does not exist for %s database type","Installer does not exist for %s database type"
 "Installing Maho","Installing Maho"
 "Just a moment...","Just a moment..."
 "Last Name","Last Name"
 "License","License"
-"License Agreement","License Agreement"
 "Locale","Locale"
-"Locale settings","Locale settings"
 "Localization","Localization"
 "Login Information","Login Information"
 "No resource for %s DB model.","No resource for %s DB model."
@@ -75,9 +70,9 @@
 "Username","Username"
 "User Password","User Password"
 "Use Secure URLs (SSL)","Use Secure URLs (SSL)"
-"Web access options","Web access options"
 "Web Access Options","Web Access Options"
+"Installation Progress","Installation Progress"
+"Maho Installation Wizard","Maho Installation Wizard"
 "Welcome to Maho's Installation Wizard","Welcome to Maho's Installation Wizard"
 "You're All Set","You're All Set"
-"You're All Set!","You're All Set!"
 "You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock","You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock"
