New design for the web installer (#342)

--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -1,12 +1,15 @@
 "(Optional. Leave blank for no prefix)","(Optional. Leave blank for no prefix)"
 "Additional path added after Base URL to access your Administrative Panel (e.g. admin, backend, control etc.).","Additional path added after Base URL to access your Administrative Panel (e.g. admin, backend, control etc.)."
+"Admin","Admin"
 "Admin Path","Admin Path"
 "Base URL","Base URL"
+"Complete","Complete"
+"Config","Config"
 "Configuration","Configuration"
 "Confirm Password","Confirm Password"
-"Connection","Connection"
 "Continue","Continue"
 "Create Admin Account","Create Admin Account"
+"Creating Your Admin Account","Creating Your Admin Account"
 "Database","Database"
 "Database Connection","Database Connection"
 "Database connection error.","Database connection error."
@@ -22,7 +25,6 @@
 "Email","Email"
 "Email Address","Email Address"
 "Enable Charts","Enable Charts"
-"Enable this option only if you have SSL available.","Enable this option only if you have SSL available."
 "File System","File System"
 "First Name","First Name"
 "Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
@@ -30,14 +32,16 @@
 "Go to Frontend","Go to Frontend"
 "Host","Host"
 "I agree to the above terms and conditions.","I agree to the above terms and conditions."
-"Installation","Installation"
+"Installation Progress","Installation Progress"
 "Installer does not exist for %s database type","Installer does not exist for %s database type"
+"Installing Maho","Installing Maho"
+"Just a moment...","Just a moment..."
 "Last Name","Last Name"
-"License Agreement","License Agreement"
+"License","License"
 "Locale","Locale"
-"Locale settings","Locale settings"
 "Localization","Localization"
 "Login Information","Login Information"
+"Maho Installation Wizard","Maho Installation Wizard"
 "No resource for %s DB model.","No resource for %s DB model."
 "One of PHP Extensions ""%s"" must be loaded.","One of PHP Extensions ""%s"" must be loaded."
 "Password","Password"
@@ -49,6 +53,7 @@
 "PHP Extensions ""%s"" must be loaded.","PHP Extensions ""%s"" must be loaded."
 "Please correct the user data and try again.","Please correct the user data and try again."
 "Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
+"Please wait while we set up your store...","Please wait while we set up your store..."
 "Provide a complete base URL for SSL connection. For example: %s","Provide a complete base URL for SSL connection. For example: %s"
 "Required Fields","Required Fields"
 "Response from server isn't valid.","Response from server isn't valid."
@@ -67,8 +72,7 @@
 "Username","Username"
 "User Password","User Password"
 "Use Secure URLs (SSL)","Use Secure URLs (SSL)"
-"Web access options","Web access options"
+"Web Access Options","Web Access Options"
 "Welcome to Maho's Installation Wizard","Welcome to Maho's Installation Wizard"
 "You're All Set","You're All Set"
-"You're All Set!","You're All Set!"
 "You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock","You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock"
