--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -22,6 +22,7 @@
 "-- Please Select Billing Agreement--","-- Please Select Billing Agreement--"
 "1 Hour","1 Hour"
 "2 Hours","2 Hours"
+"2FA verification code:","2FA verification code:"
 "2FA verification code is invalid.","2FA verification code is invalid."
 "2YTD","2YTD"
 "6 Hours","6 Hours"
@@ -519,6 +520,7 @@
 "Log in to Admin Panel","Log in to Admin Panel"
 "Log into Maho Admin Page","Log into Maho Admin Page"
 "Log in to use <strong>%s</strong>","Log in to use <strong>%s</strong>"
+"Login with Passkey","Login with Passkey"
 "Log Out","Log Out"
 "Low Stock","Low Stock"
 "Maho Admin","Maho Admin"
@@ -557,6 +559,7 @@
 "Name","Name"
 "Name:","Name:"
 "Name on Card","Name on Card"
+"Network Error. Please refresh the page.","Network Error. Please refresh the page."
 "Never (production)","Never (production)"
 "New ","New "
 "New Accounts","New Accounts"
