Added SVG support for favicon and placeholder uploads with security sanitization (#344)

--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -17,7 +17,7 @@
 "Advanced","Advanced"
 "Advanced Cache Settings","Advanced Cache Settings"
 "Allow Countries","Allow Countries"
-"Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG. Not all browsers support all these formats!","Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG. Not all browsers support all these formats!"
+"Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG, WEBP, AVIF, SVG. Not all browsers support all these formats!","Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG, WEBP, AVIF, SVG. Not all browsers support all these formats!"
 "Allowed IPs (comma separated)","Allowed IPs (comma separated)"
 "Allow Maho Backend to run in frame","Allow Maho Backend to run in frame"
 "Allow Maho Frontend to run in frame","Allow Maho Frontend to run in frame"
@@ -62,6 +62,7 @@
 "Cookie Restriction Mode","Cookie Restriction Mode"
 "Copyright","Copyright"
 "Core","Core"
+"Could not write sanitized SVG file.","Could not write sanitized SVG file."
 "Countries Options","Countries Options"
 "Country","Country"
 "Create Store","Create Store"
@@ -137,6 +138,7 @@
 "Favicon Icon","Favicon Icon"
 "File %s does not exist","File %s does not exist"
 "File %s is not readable","File %s is not readable"
+"File is not a valid SVG.","File is not a valid SVG."
 "File name is too long. Maximum length is %s.","File name is too long. Maximum length is %s."
 "File not found","File not found"
 "File system","File system"
@@ -179,6 +181,7 @@
 "Invalid layout update handle","Invalid layout update handle"
 "Invalid messages storage ""%s"" for layout messages initialization","Invalid messages storage ""%s"" for layout messages initialization"
 "Invalid MIME type.","Invalid MIME type."
+"Invalid or empty SVG file.","Invalid or empty SVG file."
 "Invalid query","Invalid query"
 "Invalid stream.","Invalid stream."
 "Invalid template path: contains parent directory traversal","Invalid template path: contains parent directory traversal"
@@ -347,6 +350,8 @@
 "Store View Name","Store View Name"
 "Store with the same code","Store with the same code"
 "Strict","Strict"
+"SVG file could not be sanitized.","SVG file could not be sanitized."
+"SVG sanitization failed: %s","SVG sanitization failed: %s"
 "System","System"
 "Template Path Hints","Template Path Hints"
 "Templates","Templates"
