--- a/app/locale/en_US/Mage_Newsletter.csv
+++ b/app/locale/en_US/Mage_Newsletter.csv
@@ -11,11 +11,22 @@
 "Confirmation Email Template","Confirmation Email Template"
 "Confirmation request has been sent.","Confirmation request has been sent."
 "Convert to Plain Text","Convert to Plain Text"
+"Coupon Code","Coupon Code"
+"Coupon Discount Description","Coupon Discount Description"
+"Coupon Discount Amount","Coupon Discount Amount"
+"Coupon Expiration Date","Coupon Expiration Date"
+"Coupon Expiration Date (Formatted)","Coupon Expiration Date (Formatted)"
+"Coupon Expiration Date (Raw)","Coupon Expiration Date (Raw)"
+"Coupon Rule Description","Coupon Rule Description"
 "Create Newsletter Template","Create Newsletter Template"
+"Customer Name (Object)","Customer Name (Object)"
 "Customer","Customer"
+"Customer Email","Customer Email"
 "Customer First Name","Customer First Name"
 "Customer Last Name","Customer Last Name"
 "Customer Middle Name","Customer Middle Name"
+"Customer Name","Customer Name"
+"Customer Variables","Customer Variables"
 "Customer My Account Newsletter Subscriptions","Customer My Account Newsletter Subscriptions"
 "Customer Segments","Customer Segments"
 "Date Added","Date Added"
@@ -31,11 +42,13 @@
 "Edit Queue","Edit Queue"
 "Edit Template","Edit Template"
 "Email","Email"
+"Email Automation Variables","Email Automation Variables"
 "Error Code","Error Code"
 "Error Text","Error Text"
-"Follow this link to unsubscribe <!-- This tag is for unsubscribe link  --><a href=""{{var subscriber.getUnsubscriptionLink()}}"">{{var subscriber.getUnsubscriptionLink()}}</a>","Follow this link to unsubscribe <!-- This tag is for unsubscribe link  --><a href=""{{var subscriber.getUnsubscriptionLink()}}"">{{var subscriber.getUnsubscriptionLink()}}</a>"
+"Follow this link to unsubscribe:","Follow this link to unsubscribe:"
 "Guest","Guest"
 "ID","ID"
+"Insert Variable...","Insert Variable..."
 "Invalid queue selected.","Invalid queue selected."
 "Invalid sender email address","Invalid sender email address"
 "Invalid subscription confirmation code.","Invalid subscription confirmation code."
@@ -57,6 +70,7 @@
 "Newsletter subscription success","Newsletter subscription success"
 "Newsletter Templates","Newsletter Templates"
 "Newsletter unsubscription success","Newsletter unsubscription success"
+"Newsletter Variables","Newsletter Variables"
 "New Template","New Template"
 "No problems found.","No problems found."
 "No subscribers selected.","No subscribers selected."
@@ -85,6 +99,8 @@
 "Save As","Save As"
 "Save Newsletter","Save Newsletter"
 "Save Template","Save Template"
+"Segment Name","Segment Name"
+"Sequence Step Number","Sequence Step Number"
 "Selected problems have been deleted.","Selected problems have been deleted."
 "Selected problem subscribers have been unsubscribed.","Selected problem subscribers have been unsubscribed."
 "Sender","Sender"
@@ -99,8 +115,10 @@
 "Start","Start"
 "Status","Status"
 "Store","Store"
+"Store URL","Store URL"
 "Store View","Store View"
 "Subject","Subject"
+"Subscriber Email","Subscriber Email"
 "Submit","Submit"
 "Subscribe","Subscribe"
 "Subscribed","Subscribed"
@@ -131,6 +149,7 @@
 "Unconfirmed","Unconfirmed"
 "Unsubscribe","Unsubscribe"
 "Unsubscribed","Unsubscribed"
+"Unsubscribe Link","Unsubscribe Link"
 "Unsubscribe Selected","Unsubscribe Selected"
 "Unsubscription Email Sender","Unsubscription Email Sender"
 "Unsubscription Email Template","Unsubscription Email Template"
