--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -260,7 +260,10 @@
 "Display Product Count","Display Product Count"
 "Display Type","Display Type"
 "Downloadable Information","Downloadable Information"
+"Do you want to duplicate the product images as well?","Do you want to duplicate the product images as well?"
+"Do you want to duplicate the product images as well?","Do you want to duplicate the product images as well?"
 "Duplicate","Duplicate"
+"Duplicate Product","Duplicate Product"
 "Duplicate website, country and state tax found.","Duplicate website, country and state tax found."
 "Duplicate website group price customer group.","Duplicate website group price customer group."
 "Duplicate website tier price customer group and quantity.","Duplicate website tier price customer group and quantity."
@@ -439,6 +442,7 @@
 "New Subcategory","New Subcategory"
 "Next","Next"
 "No","No"
+"No, without images","No, without images"
 "No image","No image"
 "No layout updates","No layout updates"
 "None","None"
@@ -820,6 +824,7 @@
 "x","x"
 "Year Range","Year Range"
 "Yes","Yes"
+"Yes, with images","Yes, with images"
 "You have no items to compare.","You have no items to compare."
 "You may also be interested in the following product(s)","You may also be interested in the following product(s)"
 "You saved the search term.","You saved the search term."
