--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -4,8 +4,8 @@
 "Active","Active"
 "Added to Cart Date","Added to Cart Date"
 "Added to Wishlist Date","Added to Wishlist Date"
+"Add Email Step","Add Email Step"
 "Add New Segment","Add New Segment"
-"Add New Sequence Step","Add New Sequence Step"
 "Address","Address"
 "Address Information","Address Information"
 "Add Segment","Add Segment"
@@ -36,6 +36,7 @@
 "Completed","Completed"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
 "Configurable Product","Configurable Product"
+"Configure email sequences in the ""Enter Segment"" and ""Exit Segment"" tabs","Configure email sequences in the ""Enter Segment"" and ""Exit Segment"" tabs"
 "Count","Count"
 "Coupon expiration days","Coupon expiration days"
 "Coupon expiration days cannot be negative.","Coupon expiration days cannot be negative."
@@ -69,15 +70,21 @@
 "Delete Step","Delete Step"
 "Disabled","Disabled"
 "Downloadable Product","Downloadable Product"
+"E-mails on Enter","E-mails on Enter"
+"E-mails on Exit","E-mails on Exit"
 "Edit","Edit"
 "Edit Email Sequence Step %d for ""%s""","Edit Email Sequence Step %d for ""%s"""
 "Edit Segment","Edit Segment"
 "Edit Segment '%s'","Edit Segment '%s'"
 "Edit Sequence","Edit Sequence"
 "Email Automation","Email Automation"
+"Email Automation - Enter Segment","Email Automation - Enter Segment"
+"Email Automation - Exit Segment","Email Automation - Exit Segment"
 "Email Automation Settings","Email Automation Settings"
 "Email Sequence Management","Email Sequence Management"
 "Email Sequences","Email Sequences"
+"Emails sent when customers join this segment","Emails sent when customers join this segment"
+"Emails sent when customers leave this segment","Emails sent when customers leave this segment"
 "Email Template","Email Template"
 "Email trigger must be set when automation is enabled.","Email trigger must be set when automation is enabled."
 "Enable/disable this sequence step","Enable/disable this sequence step"
@@ -94,6 +101,7 @@
 "Generate unique coupon","Generate unique coupon"
 "Grouped Product","Grouped Product"
 "hours","hours"
+"How Email Automation Works","How Email Automation Works"
 "If %s %s %s","If %s %s %s"
 "Immediate","Immediate"
 "Invalid newsletter template selected.","Invalid newsletter template selected."
@@ -116,6 +124,7 @@
 "Manage Email Sequences","Manage Email Sequences"
 "Manage Segments","Manage Segments"
 "Manual","Manual"
+"Master switch to enable/disable all email automation for this segment","Master switch to enable/disable all email automation for this segment"
 "Metric","Metric"
 "minutes","minutes"
 "Minutes to wait before sending (0 = immediate, 60 = 1 hour, 1440 = 1 day)","Minutes to wait before sending (0 = immediate, 60 = 1 hour, 1440 = 1 day)"
@@ -200,6 +209,7 @@
 "Total of %d record(s) were updated.","Total of %d record(s) were updated."
 "Total Ordered Amount","Total Ordered Amount"
 "Trigger Event","Trigger Event"
+"Trigger event must be either ""enter"" or ""exit"".","Trigger event must be either ""enter"" or ""exit""."
 "Unable to find a segment to refresh.","Unable to find a segment to refresh."
 "Unique Customers","Unique Customers"
 "View","View"
