--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -61,6 +61,7 @@
 "Delay before sending","Delay before sending"
 "Delay minutes cannot be negative.","Delay minutes cannot be negative."
 "Delete","Delete"
+"Delete Email Sequences","Delete Email Sequences"
 "Delete Segment","Delete Segment"
 "Delete Segments","Delete Segments"
 "Delete Step","Delete Step"
@@ -75,6 +76,7 @@
 "Edit Sequence","Edit Sequence"
 "Email Automation","Email Automation"
 "Email Automation Settings","Email Automation Settings"
+"Email Sequences","Email Sequences"
 "Email Template","Email Template"
 "Enable/disable this sequence step","Enable/disable this sequence step"
 "Enable Email Automation","Enable Email Automation"
@@ -108,6 +110,7 @@
 "Lifetime Profit (Sales - Refunds)","Lifetime Profit (Sales - Refunds)"
 "Lifetime Refunds Amount","Lifetime Refunds Amount"
 "Lifetime Sales Amount","Lifetime Sales Amount"
+"Manage Email Sequences","Manage Email Sequences"
 "Manage Segments","Manage Segments"
 "Manual","Manual"
 "Master switch to enable/disable all email automation for this segment","Master switch to enable/disable all email automation for this segment"
@@ -155,6 +158,7 @@
 "Sales rule to base coupon on","Sales rule to base coupon on"
 "Sales rule to use as template for generated coupons","Sales rule to use as template for generated coupons"
 "Save and Continue Edit","Save and Continue Edit"
+"Save Email Sequences","Save Email Sequences"
 "Save Segment","Save Segment"
 "Save Segments","Save Segments"
 "Scheduled","Scheduled"
