--- a/app/locale/en_US/Mage_Newsletter.csv
+++ b/app/locale/en_US/Mage_Newsletter.csv
@@ -6,6 +6,7 @@
 "Back","Back"
 "Cancel","Cancel"
 "Cancelled","Cancelled"
+"Cannot delete this template. It is currently used by %d email automation sequence(s). Please reassign or delete those sequences first.","Cannot delete this template. It is currently used by %d email automation sequence(s). Please reassign or delete those sequences first."
 "Cannot mark as received subscriber.","Cannot mark as received subscriber."
 "Confirmation Email Sender","Confirmation Email Sender"
 "Confirmation Email Template","Confirmation Email Template"
@@ -135,6 +136,7 @@
 "Template Type","Template Type"
 "Template type must be numeric","Template type must be numeric"
 "Thank you for your subscription.","Thank you for your subscription."
+"The newsletter template has been deleted.","The newsletter template has been deleted."
 "There was a problem with the subscription.","There was a problem with the subscription."
 "There was a problem with the subscription: %s","There was a problem with the subscription: %s"
 "There was a problem with the un-subscription.","There was a problem with the un-subscription."
