--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -211,3 +211,4 @@
 "Wishlist","Wishlist"
 "Wishlist Items Count","Wishlist Items Count"
 "Wishlist Shared","Wishlist Shared"
+"Step number %d already exists for this segment %s trigger.","Step number %d already exists for this segment %s trigger."
