--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -226,6 +226,8 @@
 "Convert to Plain Text","Convert to Plain Text"
 "Country","Country"
 "Country:","Country:"
+"Coupon Discount (Formatted Text)","Coupon Discount (Formatted Text)"
+"Coupon Discount Amount (Raw Number)","Coupon Discount Amount (Raw Number)"
 "Coupons","Coupons"
 "Create","Create"
 "Created At","Created At"
