--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -200,6 +200,7 @@
 "Total Ordered Amount","Total Ordered Amount"
 "Trigger event must be either ""enter"" or ""exit"".","Trigger event must be either ""enter"" or ""exit""."
 "Unable to find a segment to refresh.","Unable to find a segment to refresh."
+"Unknown Segment","Unknown Segment"
 "View","View"
 "View Count","View Count"
 "View Customers in Segment","View Customers in Segment"
