--- a/app/locale/en_US/Mage_Checkout.csv
+++ b/app/locale/en_US/Mage_Checkout.csv
@@ -121,6 +121,7 @@
 "Enable Onepage Checkout","Enable Onepage Checkout"
 "Enable Terms and Conditions","Enable Terms and Conditions"
 "Enter a New Address","Enter a New Address"
+"Enter discount code","Enter discount code"
 "Enter your destination to get a shipping estimate.","Enter your destination to get a shipping estimate."
 "Estimate","Estimate"
 "Estimate Shipping and Tax","Estimate Shipping and Tax"
