--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -340,6 +340,7 @@
 "Register and Checkout","Register and Checkout"
 "Registered Customers","Registered Customers"
 "Registration Password Requirement","Registration Password Requirement"
+"Registration successful, but we could not send the login link. Please use the login page.","Registration successful, but we could not send the login link. Please use the login page."
 "Remember Me","Remember Me"
 "Remind Email Template","Remind Email Template"
 "Remind Password","Remind Password"
@@ -413,6 +414,7 @@
 "Telephone","Telephone"
 "Text","Text"
 "Text One Line","Text One Line"
+"Thank you for registering! We have sent you an email with a login link to %s.","Thank you for registering! We have sent you an email with a login link to %s."
 "Thank you for registering with %s.","Thank you for registering with %s."
 "The account information has been saved.","The account information has been saved."
 "The address does not belong to this customer.","The address does not belong to this customer."
