--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -98,6 +98,7 @@
 "Customer Groups","Customer Groups"
 "Customer Information","Customer Information"
 "Customer Login","Customer Login"
+"Customer Magic Link Request Form","Customer Magic Link Request Form"
 "Customer My Account (All Pages)","Customer My Account (All Pages)"
 "Customer My Account Address Book","Customer My Account Address Book"
 "Customer My Account Address Edit Form","Customer My Account Address Edit Form"
@@ -144,7 +145,7 @@
 "Email Address","Email Address"
 "Email Link to Set Password","Email Link to Set Password"
 "Email Link to Set Password on New Account","Email Link to Set Password on New Account"
-"Email me a login link instead","Email me a login link instead"
+"Email Link to Set Password Options","Email Link to Set Password Options"
 "Email Sender","Email Sender"
 "Email Template","Email Template"
 "Enable ""Remember Me""","Enable ""Remember Me"""
@@ -206,7 +207,6 @@
 "Last Date Unsubscribed","Last Date Unsubscribed"
 "Last Name","Last Name"
 "Last URL","Last URL"
-"Leave blank to use passwordless login","Leave blank to use passwordless login"
 "Leave empty for default (2). Valid range: 1-4","Leave empty for default (2). Valid range: 1-4"
 "Leave empty for default (15 minutes).","Leave empty for default (15 minutes)."
 "Lifetime Sales","Lifetime Sales"
@@ -222,6 +222,7 @@
 "Log Out","Log Out"
 "Magic Link (Passwordless Login) Options","Magic Link (Passwordless Login) Options"
 "Magic Link Email Template","Magic Link Email Template"
+"Magic Link Login","Magic Link Login"
 "Manage Addresses","Manage Addresses"
 "Manage Customers","Manage Customers"
 "Maximum length must be less then %s symbols","Maximum length must be less than %s symbols"
@@ -311,6 +312,7 @@
 "Please enter the telephone number.","Please enter the telephone number."
 "Please enter the zip/postal code.","Please enter the zip/postal code."
 "Please enter your email.","Please enter your email."
+"Please enter your email address below. You will receive a link to log in to your account.","Please enter your email address below. You will receive a link to log in to your account."
 "Please enter your email address below. You will receive a link to reset your password.","Please enter your email address below. You will receive a link to reset your password."
 "Please enter your email below and we'll send you confirmation link for it.","Please enter your email below and we'll send you confirmation link for it."
 "Please make sure your passwords match.","Please make sure your passwords match."
@@ -338,6 +340,7 @@
 "Register","Register"
 "Register and Checkout","Register and Checkout"
 "Registered Customers","Registered Customers"
+"Registration Form","Registration Form"
 "Registration Password Requirement","Registration Password Requirement"
 "Registration successful, but we could not send the login link. Please use the login page.","Registration successful, but we could not send the login link. Please use the login page."
 "Remember Me","Remember Me"
@@ -345,7 +348,6 @@
 "Remind Password","Remind Password"
 "Remove","Remove"
 "Remove address","Remove address"
-"Request Magic Link","Request Magic Link"
 "Require admin user to change user password","Require admin user to change user password"
 "Require Emails Confirmation","Require Emails Confirmation"
 "Require Password (Default)","Require Password (Default)"
@@ -371,7 +373,7 @@
 "Send confirmation link","Send confirmation link"
 "Send From","Send From"
 "Sending","Sending"
-"Send Me a Login Link","Send Me a Login Link"
+"Send Magic Link","Send Magic Link"
 "Send Welcome Email","Send Welcome Email"
 "Send Welcome Email after Confirmation","Send Welcome Email after Confirmation"
 "Sent","Sent"
